added the css file

--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
     <head>
         <title>Search</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <form action="https://google.com/search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
+        <form  class="search" action="https://google.com/search">
+            <div>
+
+                <input class="search_bar"  type="text" name="q">
+                <input type="submit" value="Google Search">
+            </div>
         </form>
     </body>
 </html>
