almost done with the index page added the search bar, the logo and the I'm feeling lucky btn

--- a/index.html
+++ b/index.html
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Search</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <form  class="search" action="https://google.com/search">
-            <div>
 
-                <input class="search_bar"  type="text" name="q">
-                <input type="submit" value="Google Search">
+<head>
+    <title>Search</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+    <div class="body">
+
+        <h1 class="title"><img src="googlelogo_light_color_272x92dp.png" alt="Google"></h1>
+
+        <form class="search" action="https://google.com/search">
+            
+            <div>
+                <input class="search_bar" type="text" name="q">
+                <button class="search_btn" type="submit" value="Google Search">
+                    <img class="search_icon" src="loupe.png" alt="Search">
+                </button>
             </div>
+
         </form>
-    </body>
+
+        <button type="button" class="lucky">
+            I'm Feeling Lucky
+        </button>
+
+    </div>
+
+
+
+
+
+</body>
+
 </html>
