add the image page and also tidy up my work

--- a/image.html
+++ b/image.html
@@ -10,22 +10,21 @@
 
     <div class="body">
 
-        <h1 class="title"><img src="img/googlelogo_light_color_272x92dp.png" alt="Google"></h1>
+        <div class="logo_div">
+            <h1 class="title"><img src="img/googlelogo_light_color_272x92dp.png" alt="Google"></h1>
+            <p>images</p>
+        </div>
 
-        <form class="search" action="https://google.com/search">
+        <form class="search" action="https://google.com/images">
             
             <div>
                 <input class="search_bar" type="text" name="q">
                 <button class="search_btn" type="submit" value="Google Search">
-                    <img class="search_icon" src="img/loupe.png" alt="Search">
+                    <img class="search_icon" src="img/photo-camera-interface-symbol-for-button.png" alt="Search">
                 </button>
             </div>
 
         </form>
-
-        <button type="button" class="lucky">
-            I'm Feeling Lucky
-        </button>
 
     </div>
 
