--- a/image.html
+++ b/image.html
@@ -16,12 +16,24 @@
         </div>
 
         <form class="search" action="https://google.com/images">
-            
+
             <div>
                 <input class="search_bar" type="text" name="q">
                 <button class="search_btn" type="submit" value="Google Search">
                     <img class="search_icon" src="img/photo-camera-interface-symbol-for-button.png" alt="Search">
                 </button>
+            </div>
+
+            <div class="lucky_div">
+                <div>
+                    <button class="google-btn  lucky" type="submit" value="Google Search">
+                        Google Search
+                    </button>
+
+                    <button type="button" class="lucky">
+                        I'm Feeling Lucky
+                    </button>
+                </div>
             </div>
 
         </form>
