added the advanced page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
 </head>
 
 <body>
-    
+
+    <div class="link_div">
+        <div>
+            <button class="lucky">
+                <a href="image.html">Google Img</a>
+            </button>
+            <button class="lucky advanced">
+                <a href="advanced.html">
+                      Advanced search
+                </a>
+            </button>
+        </div>
+    </div>
+
     <div class="body">
 
         <h1 class="title"><img src="img/googlelogo_light_color_272x92dp.png" alt="Google"></h1>
@@ -26,7 +39,7 @@
                     <button class="google-btn  lucky" type="submit" value="Google Search">
                         Google Search
                     </button>
-    
+
                     <button type="button" class="lucky">
                         I'm Feeling Lucky
                     </button>
@@ -37,11 +50,6 @@
 
 
     </div>
-
-
-
-
-
 </body>
 
 </html>
