--- a/image.html
+++ b/image.html
@@ -8,6 +8,15 @@
 
 <body>
 
+    <div class="home_div">
+        <div >
+            <a href="index.html">
+                <img class="home_img"  src="img\home.png" alt="">
+            </a>
+        </div>
+    </div>
+
+
     <div class="body">
 
         <div class="logo_div">
@@ -26,10 +35,6 @@
 
             <div class="lucky_div">
                 <div>
-                    <button class="google-btn  lucky" type="submit" value="Google Search">
-                        Google Search
-                    </button>
-
                     <button type="button" class="lucky">
                         I'm Feeling Lucky
                     </button>
