--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 
     <div class="link_div">
         <div>
-            <button class="lucky">
-                <a href="image.html">Google Img</a>
-            </button>
-            <button class="lucky advanced">
-                <a href="advanced.html">
-                      Advanced search
-                </a>
-            </button>
+            <a href="image.html">
+                <button class="lucky">
+                    Google Img
+                </button>
+            </a>
+            <a href="advanced.html">
+                <button class="lucky advanced">
+                    Advanced search
+                </button>
+            </a>
         </div>
     </div>
 
